# slow-workers-challenge

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
services/worker/: README.md  main.py  pyproject.toml
services/worker/core/: __init__.py  manager.py
services/worker/core/implementations/: __init__.py  request_source.py  result_processor.py
services/worker/core/interfaces/: __init__.py  request_source.py  result_processor.py
services/worker/generators/: __init__.py
services/worker/job/: __init__.py  models.py  processor.py
services/worker/tests/: __init__.py  test_text_generator.py
src/: __init__.py  config.py  main.py
src/api/: app.py  handlers.py  models.py
src/data/: __init__.py  interfaces.py  redis.py
src/generators/: __init__.py  text.py
src/job/: manager.py  models.py  processor.py  task.py
src/processor/: output.py  prompt_processor.py
tests/: test_manager.py
