[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text-gen-api"
version = "0.1.0"
description = "API service for text generation"
requires-python = ">=3.12"
authors = [
    {name = "Project Team"},
]
dependencies = [
    "aiohttp>=3.9.3",
    "redis>=5.0.1",
    "rq>=1.15.1",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
]

[tool.ruff.isort]
known-first-party = ["api"]

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short" 