[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worker-service"
version = "0.1.0"
description = "Worker service for the slow-workers-challenge"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Project Team"},
]
dependencies = [
    "pydantic>=2.6.1",
    "httpx>=0.27.0",
    "redis>=5.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.2",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "ANN", # flake8-annotations
]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
]

[tool.ruff.isort]
known-first-party = ["worker"]

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"] 